crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params_pre_anf__empty_lambda_argument.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params_pre_anf.rs
assertion_line: 37
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#2 : int -> int = \unused#1 : int -> 42 in
helper#2 (\ -> trace "argument" in 7)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_2
    [helper_2
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])])
    (lam unused_1 (con integer 42))])
--- optimized Core
let arg#5 : int = trace "argument" in 7 in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam arg_1 (con integer 42))
      (force [[builtin_2 (con string "argument")] (delay (con integer 7))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let helper#2 : int -> int = \unused#1 : int -> 42 in
helper#2 (\ -> trace "argument" in 7)
--- core early
let helper#2 : @delay int = delay 42 in
let arg#3 : int = \ -> trace "argument" in 7 in
force helper#2
--- core after ANF
let helper#2 : @delay int = delay 42 in
let arg#3 : int = trace "argument" in 7 in
force helper#2
--- uplc before
(program 1.1.0
  [(lam helper_2
    [helper_2
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])])
    (lam unused_1 (con integer 42))])
--- uplc after
(program 1.1.0
  [(lam helper_2
    [(lam arg_3 (force helper_2))
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])])
    (delay (con integer 42))])
--- result
(con integer 42)
--- logs
["argument"]
