crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params_pre_anf__failure_last.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params_pre_anf.rs
assertion_line: 37
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#12 : int -> int -> int -> int = \p#9 : int p#10 : int p#11 : int -> trace "body" in p#10 in
helper#12 (trace "a" in 42) (trace "b" in 42) (trace "c" in error)
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_12
    [[[helper_12
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 42))])]
      (force [[(force (builtin trace)) (con string "b")] (delay (con integer 42))])]
      (force [[(force (builtin trace)) (con string "c")] (delay (error))])])
    (lam p_9
      (lam p_10
        (lam p_11 (force [[(force (builtin trace)) (con string "body")] (delay p_10)]))))])
--- optimized Core
let arg#5 : int = trace "a" in 42 in
let arg#6 : int = trace "b" in 42 in
let arg#7 : int = trace "c" in error in
trace "body" in arg#6
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam arg_1
      [(lam arg_2
        [(lam arg_3 (force [[builtin_4 (con string "body")] (delay arg_2)]))
          (force [[builtin_4 (con string "c")] (delay (error))])])
        (force [[builtin_4 (con string "b")] (delay (con integer 42))])])
      (force [[builtin_4 (con string "a")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let helper#12 : int -> int -> int -> int = \p#9 : int p#10 : int p#11 : int -> trace "body" in p#10 in
helper#12 (trace "a" in 42) (trace "b" in 42) (trace "c" in error)
--- core early
let helper#12 : int -> int = \p#10 : int -> trace "body" in p#10 in
let arg#1 : int = trace "a" in 42 in
let arg#2 : int = trace "b" in 42 in
let arg#3 : int = trace "c" in error in
helper#12 arg#2
--- core after ANF
let helper#12 : int -> int = \p#10 : int -> trace "body" in p#10 in
let arg#1 : int = trace "a" in 42 in
let arg#2 : int = trace "b" in 42 in
let arg#3 : int = trace "c" in error in
helper#12 arg#2
--- uplc before
(program 1.1.0
  [(lam helper_12
    [[[helper_12
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 42))])]
      (force [[(force (builtin trace)) (con string "b")] (delay (con integer 42))])]
      (force [[(force (builtin trace)) (con string "c")] (delay (error))])])
    (lam p_9
      (lam p_10
        (lam p_11 (force [[(force (builtin trace)) (con string "body")] (delay p_10)]))))])
--- uplc after
(program 1.1.0
  [(lam helper_12
    [(lam arg_1
      [(lam arg_2
        [(lam arg_3 [helper_12 arg_2])
          (force [[(force (builtin trace)) (con string "c")] (delay (error))])])
        (force [[(force (builtin trace)) (con string "b")] (delay (con integer 42))])])
      (force [[(force (builtin trace)) (con string "a")] (delay (con integer 42))])])
    (lam p_10 (force [[(force (builtin trace)) (con string "body")] (delay p_10)]))])
--- result
error: ExplicitErrorTerm
--- logs
["a", "b", "c"]
