crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params_pre_anf__fresh_type_views.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params_pre_anf.rs
assertion_line: 220
expression: "crate::harness::pass_snapshot(b.arena, b.lam(&[external], root),\nformat!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after)))"
---
--- unoptimized Core
\external#4 : int -> let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
helper#3 (trace "unused" in 0) (addInteger external#4 1)
--- unoptimized UPLC
(program 1.1.0
  (lam external_4
    [(lam helper_3
      [[helper_3
        (force
          [[(force (builtin trace)) (con string "unused")] (delay (con integer 0))])]
        [[(builtin addInteger) external_4] (con integer 1)]])
      (lam unused_1 (lam used_2 used_2))]))
--- optimized Core
\external#5 : int -> let arg#9 : int = trace "unused" in 0 in
addInteger external#5 1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    (lam external_1
      [(lam arg_2 [[(builtin addInteger) external_1] (con integer 1)])
        (force [[builtin_3 (con string "unused")] (delay (con integer 0))])]))
    (force (builtin trace))])
--- isolated pass
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
helper#3 (trace "unused" in 0) (addInteger external#4 1)
--- core after
let helper#3 : int -> int = \used#2 : int -> used#2 in
let arg#5 : int = trace "unused" in 0 in
let arg#6 : bytes = addInteger external#4 1 in
helper#3 arg#6
